# SmartTV-SeriesVidaaU7

./: README.md
oss/part2/bluetooth_mw/non_rpc_test/src/main/: BUILD.gn  btmw_test_cli.c  btmw_test_debug.c  btmw_test_utl.c  edit.c  eloop.c
oss/part2/bluetooth_mw/playback/STEREO/: Android.mk  BUILD.gn  bt_a2dp_stereo_playback.c  bt_a2dp_stereo_playback.h
oss/part2/bluetooth_mw/rpc/mtk_rpcipc_bt_service/mtk_bt_service_client/: BUILD.gn  rw_init_mtk_bt_service.c
oss/part2/bluetooth_mw/rpc/mtk_rpcipc_bt_service/mtk_bt_service_server/: BUILD.gn  rh_init_mtk_bt_service.c
oss/part2/bluetooth_mw/rpc_test/src/: Android.mk  BUILD.gn  btmw_rpc_test_cli.c  btmw_rpc_test_debug.c  btmw_rpc_test_utl.c  edit.c  eloop.c
oss/part2/bluetooth_mw/rpc_test/src/a2dp/: Android.mk  BUILD.gn  btmw_rpc_test_a2dp_sink_if.c  btmw_rpc_test_a2dp_src_if.c
oss/part2/bluetooth_mw/rpc_test/src/avrcp/: BUILD.gn  btmw_rpc_test_avrcp_ct_if.c  btmw_rpc_test_avrcp_tg_if.c
oss/part2/bluetooth_mw/rpc_test/src/ble_advertiser/: BUILD.gn  btmw_rpc_test_ble_advertiser_if.c
oss/part2/bluetooth_mw/rpc_test/src/ble_scanner/: Android.mk  BUILD.gn  btmw_rpc_test_ble_scanner_if.c
oss/part2/bluetooth_mw/rpc_test/src/gap/: BUILD.gn  btmw_rpc_test_gap_if.c
oss/part2/bluetooth_mw/rpc_test/src/gatt/: BUILD.gn  btmw_rpc_test_gattc_if.c  btmw_rpc_test_gatts_if.c
oss/part2/bluetooth_mw/rpc_test/src/hfp/: Android.mk  BUILD.gn  btmw_rpc_test_hfclient_if.c
oss/part2/bluetooth_mw/rpc_test/src/hid/: Android.mk  BUILD.gn  btmw_rpc_test_hid_if.c
oss/part2/bluetooth_mw/rpc_test/src/leaudio/: Android.mk  BUILD.gn  btmw_rpc_test_leaudio_bass_if.c  btmw_rpc_test_leaudio_bmr_if.c  btmw_rpc_test_leaudio_bms_if.c  btmw_rpc_test_leaudio_uploader.c  btmw_rpc_test_leaudiohw_src_if.c
oss/part2/bluetooth_mw/rpc_test/src/mesh/: Android.mk  BUILD.gn  btmw_rpc_test_mesh_if.c
oss/part2/bluetooth_mw/rpc_test/src/spp/: BUILD.gn  btmw_rpc_test_spp_if.c
oss/part2/bluetooth_mw/rpc_test/src/tools/: Android.mk  BUILD.gn  btmw_rpc_test_tools_if.c  llist_buffer.c  queue.c
oss/part2/bluetooth_mw/sdk/src/: Android.mk  BUILD.gn  bt_mw_common.c  bt_mw_log.c  bt_mw_message_queue.c
oss/part2/bluetooth_mw/sdk/src/a2dp/: Android.mk  BUILD.gn  bt_mw_a2dp_common.c  c_bt_mw_a2dp_common.c
oss/part2/bluetooth_mw/sdk/src/avrcp/: Android.mk  BUILD.gn  bt_mw_avrcp.c  c_bt_mw_avrcp.c
oss/part2/bluetooth_mw/sdk/src/ble_advertiser/: Android.mk  BUILD.gn  bt_mw_ble_advertiser.c  c_bt_mw_ble_advertiser.c
oss/part2/bluetooth_mw/sdk/src/ble_scanner/: BUILD.gn  bt_mw_ble_scanner.c  c_bt_mw_ble_scanner.c
oss/part2/bluetooth_mw/sdk/src/gap/: Android.mk  BUILD.gn  bt_mw_gap.c  c_bt_mw_gap.c
oss/part2/bluetooth_mw/sdk/src/gatt/: Android.mk  BUILD.gn  bt_mw_gatt.c  bt_mw_gattc.c  bt_mw_gatts.c  c_bt_mw_ble.c  c_bt_mw_gatt.c  c_bt_mw_gattc.c  c_bt_mw_gatts.c
oss/part2/bluetooth_mw/sdk/src/hfp/: Android.mk  BUILD.gn  bt_mw_hfclient.c  c_bt_mw_hfclient.c
oss/part2/bluetooth_mw/sdk/src/hid/: Android.mk  BUILD.gn  bt_mw_hidd.c  bt_mw_hidh.c  c_bt_mw_hidd.c  c_bt_mw_hidh.c
oss/part2/bluetooth_mw/sdk/src/inc/: bt_mw_a2dp_common.h  bt_mw_a2dp_snk.h  bt_mw_a2dp_src.h  bt_mw_avrcp.h  bt_mw_ble_advertiser.h  bt_mw_ble_scanner.h  bt_mw_common.h  bt_mw_gap.h  bt_mw_gatt.h  bt_mw_gattc.h  bt_mw_gatts.h  bt_mw_hfclient.h  bt_mw_hidd.h  bt_mw_hidh.h  bt_mw_leaudio_bass.h  bt_mw_leaudio_bmr.h  bt_mw_leaudio_bms.h  bt_mw_log.h  bt_mw_manager.h  bt_mw_mesh.h  bt_mw_message_queue.h  bt_mw_spp.h  dev_list.h  pcmcapture.h
oss/part2/bluetooth_mw/sdk/src/leaudio/: Android.mk  BUILD.gn  bt_mw_leaudio_bass.c  bt_mw_leaudio_bmr.c  bt_mw_leaudio_bms.c  c_bt_mw_leaudio_bass.c  c_bt_mw_leaudio_bmr.c  c_bt_mw_leaudio_bms.c
oss/part2/bluetooth_mw/sdk/src/mesh/: Android.mk  BUILD.gn  bt_mw_mesh.c  c_bt_mw_mesh.c
oss/part2/bluetooth_mw/sdk/src/spp/: Android.mk  BUILD.gn  bt_mw_spp.c  c_bt_mw_spp.c
oss/part2/bluetooth_mw/sdk/src/util/: Android.mk  BUILD.gn  dev_list.c
oss/part2/directfb/directfb_1.4.2/1.4.2/: DFB_Changelist.txt  Makefile.am  Makefile.in  Policy.txt  TODO  ToolChainSetting  build.sh  config.h.in  configure  configure.in  genBdf.sh  genBdf_others.sh  gen_parasoft_bdf.sh  mstconfigure.sh  readme.txt  release_code.sh  versionInfo.sh
oss/part2/directfb/directfb_1.4.2/1.4.2/BuildScript/: Arm_phy_64bits_linaro_fusion_pack_mi.sh  Arm_phy_64bits_linaro_fusion_pack_mi_android.sh  Arm_phy_64bits_linaro_fusion_pack_mi_android_482.sh  Arm_phy_64bits_linaro_fusion_pack_mi_android_550.sh  Arm_phy_64bits_linaro_fusion_pack_mi_android_550_sti_new.sh  Arm_phy_64bits_linaro_fusion_pack_mi_android_sti.sh  Arm_phy_64bits_linaro_fusion_pack_mi_linux.sh  Arm_phy_64bits_linaro_fusion_pack_mi_linux_482.sh  Arm_phy_64bits_linaro_fusion_pack_mi_linux_550.sh  Arm_phy_64bits_linaro_fusion_pack_mi_linux_550_sti_new.sh  Arm_phy_64bits_linaro_fusion_pack_mi_linux_c4tv.sh  Arm_phy_64bits_linaro_fusion_pack_mi_linux_sti.sh  autogentool.sh  autotool_check.sh
oss/part2/directfb/directfb_1.4.2/1.4.2/data/: Makefile.in
oss/part2/directfb/directfb_1.4.2/1.4.2/examples/: Arm_mstconfigure_bionic.sh  Arm_mstconfigure_bionic_arrch64.sh  Arm_mstconfigure_muf.sh  Arm_mstconfigure_muf_MI.sh  Google_mstconfigure.sh  configure.in  fix_prefix.sh  mstconfigure_muf.sh  mstconfigure_muf_uclibc.sh  mstconfigure_utopia.sh  mstconfigure_x86.sh
oss/part2/directfb/directfb_1.4.2/1.4.2/gfxdrivers/: Makefile.am  Makefile.in
oss/part2/directfb/directfb_1.4.2/1.4.2/include/: Makefile.am  Makefile.in  dfb_types.h  directfb.h  directfb_ex.h  directfb_keyboard.h  directfb_strings.h  directfb_util.h  mif.h  public_header_list  u_btn_map.h
oss/part2/directfb/directfb_1.4.2/1.4.2/inputdrivers/: Makefile.am  Makefile.in
oss/part2/directfb/directfb_1.4.2/1.4.2/interfaces/: Makefile.in
oss/part2/directfb/directfb_1.4.2/1.4.2/lib/: Makefile.in
oss/part2/directfb/directfb_1.4.2/1.4.2/patches/: Makefile.in
oss/part2/directfb/directfb_1.4.2/1.4.2/proxy/: Makefile.in
oss/part2/directfb/directfb_1.4.2/1.4.2/rules/: Makefile.in
oss/part2/directfb/directfb_1.4.2/1.4.2/src/: Makefile.am  Makefile.in  directfb.c  (+3 more)
(+2232 files in other folders)
