#
#  Copyright (C) 2015 Google, Inc.
#
#  Licensed under the Apache License, Version 2.0 (the "License");
#  you may not use this file except in compliance with the License.
#  You may obtain a copy of the License at:
#
#  http://www.apache.org/licenses/LICENSE-2.0
#
#  Unless required by applicable law or agreed to in writing, software
#  distributed under the License is distributed on an "AS IS" BASIS,
#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#  See the License for the specific language governing permissions and
#  limitations under the License.
#

executable("btmw-rpc-test") {
  sources = [
    "btmw_rpc_test_cli.c",
    "btmw_rpc_test_debug.c",
    "btmw_rpc_test_utl.c",
    "edit.c",
    "eloop.c",
  ]

  include_dirs = [
    "../inc",
    "../../inc_rpc",
  ]

  deps = [

  ]

  deps += [
    "//src/gap:btmw-rpc-test_gap",
  ]

  deps += [
    "//src/gatt:btmw-rpc-test_gatt",
  ]

  deps += [
    "//src/hfp:btmw-rpc-test_hfp",
  ]

  deps += [
    "//src/hid:btmw-rpc-test_hid",
  ]

  deps += [
    "//src/avrcp:btmw-rpc-test_avrcp",
  ]

  deps += [
    "//src/a2dp:btmw-rpc-test_a2dp",
  ]

  deps += [
    "//src/spp:btmw-rpc-test_spp",
  ]

  deps += [
    "//src/mesh:btmw-rpc-test_mesh",
  ]

  deps += [
    "//src/ble_scanner:btmw-rpc-test_ble_scanner",
  ]

  deps += [
    "//src/ble_advertiser:btmw-rpc-test_ble_adv",
  ]

  deps += [
    "//src/leaudio:btmw-rpc-test_leaudio",
  ]

  deps += [
    "//src/tools:btmw-rpc-test_tools",
  ]

  cflags_c = [
    "-Lobj/osi",
    "-losi",
  ]

  libs = [
    "-ldl",
    "-lpthread",
    "-lresolv",
    "-lrt",
    "-lmtk_bt_ipcrpc_struct",
    "-lmtk_bt_service_client",
    "-lipcrpc",
    "-lbt-common",
    "-lasound",
    "-lxml2",
  ]

  if(linux_dtv_platfrom == "yes") {
    libs += [
      "-lleaudio-uploader",
      "-lbt-uploader",
      "-lbt-playback",
      "-lmtal",
    ]
  }
}
