#
#  Copyright (C) 2015 Google, Inc.
#
#  Licensed under the Apache License, Version 2.0 (the "License");
#  you may not use this file except in compliance with the License.
#  You may obtain a copy of the License at:
#
#  http://www.apache.org/licenses/LICENSE-2.0
#
#  Unless required by applicable law or agreed to in writing, software
#  distributed under the License is distributed on an "AS IS" BASIS,
#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#  See the License for the specific language governing permissions and
#  limitations under the License.
#

shared_library("libbt-mw") {
  # wrap layer
  sources = [
    "../wrap/src/linuxbt_common.cc",
  ]

  sources += [
    "bt_mw_common.c",
    "bt_mw_log.c",
    "bt_mw_message_queue.c",
  ]

  include_dirs = [
    "../../inc",
    "../../inc/config",
    "../inc",
    "../wrap/inc",
    "inc",
  ]

  deps = [
    
  ]

  deps += [
    "//src/gap:libbtmw_gap",
  ]

  deps += [
    "//src/gatt:libbtmw_gatt",
  ]

  deps += [
    "//src/avrcp:libbtmw_avrcp",
  ]

  deps += [
    "//src/a2dp:libbtmw_a2dp_default",
  ]

  deps += [
    "//src/a2dp/src:libbtmw_a2dp_src",
  ]

  deps += [
    "//src/a2dp/snk:libbtmw_a2dp_snk",
  ]

  deps += [
    "//src/hfp:libbtmw_hfp",
  ]

  deps += [
    "//src/hid:libbtmw_hid",
  ]

  deps += [
    "//src/spp:libbtmw_spp",
  ]

  deps += [
    "//src/mesh:libbtmw_mesh",
  ]

  deps += [
    "//src/ble_scanner:libbtmw_ble_scanner",
  ]

  deps += [
    "//src/leaudio:libbtmw_leaudio",
  ]

  deps += [
    "//src/ble_advertiser:libbtmw_ble_advertiser",
  ]
  cflags_c = [
    "-Lobj/osi",
    "-losi",
  ]
  deps += [
    "//src/util:libbtmw_util",
  ]

  libs = [
    "-ldl",
    "-lpthread",
    "-lresolv",
    "-lrt",
    "-latomic",
    "-lbluetooth_types",
    "-lchrome_base",
    ipcd_link,
  ]

  if (enable_ble_mesh == "1"){
    libs += [
      "-lmesh",
      "-lmesh_adp"
    ]
  }
}
