#
#  Copyright (C) 2015 Google, Inc.
#
#  Licensed under the Apache License, Version 2.0 (the "License");
#  you may not use this file except in compliance with the License.
#  You may obtain a copy of the License at:
#
#  http://www.apache.org/licenses/LICENSE-2.0
#
#  Unless required by applicable law or agreed to in writing, software
#  distributed under the License is distributed on an "AS IS" BASIS,
#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#  See the License for the specific language governing permissions and
#  limitations under the License.
#

shared_library("libbtmw-test") {
  sources = [
    "btmw_test_cli.c",
    "btmw_test_debug.c",
    "btmw_test_utl.c",
    "edit.c",
    "eloop.c",
  ]

  include_dirs = [
    "../../inc",
  ]

  deps = [
  
  ]

  deps += [
    "//src/gap:btmw-test_gap",
  ]

  deps += [
    "//src/gatt:btmw-test_gatt",
  ]
 
  deps += [
    "//src/hid:btmw-test_hid",
  ]

  deps += [
    "//src/avrcp:btmw-test_avrcp",
  ]

  deps += [
    "//src/a2dp:btmw-test_a2dp",
  ]

  deps += [
    "//src/spp:btmw-test_spp",
  ]

  deps += [
    "//src/hfp:btmw-test_hfclient",
  ]

  deps += [
    "//src/tools:btmw-test_tools",
  ]

  cflags_c = [
    "-Lobj/osi",
    "-losi",
  ]

  libs = [
    "-ldl",
    "-lpthread",
    "-lresolv",
    "-lrt",
    "-lbt-mw",
    "-lbluetooth",
    "-laudio.a2dp.default",
    "-lz",
  ]
}