#
#  Copyright (C) 2015 Google, Inc.
#
#  Licensed under the Apache License, Version 2.0 (the "License");
#  you may not use this file except in compliance with the License.
#  You may obtain a copy of the License at:
#
#  http://www.apache.org/licenses/LICENSE-2.0
#
#  Unless required by applicable law or agreed to in writing, software
#  distributed under the License is distributed on an "AS IS" BASIS,
#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#  See the License for the specific language governing permissions and
#  limitations under the License.
#

shared_library("libmtk_bt_ipcrpc_struct") {
  sources = [
    "./src/gatt/mtk_bt_service_gatt_ipcrpc_struct.c",
    "./src/hid/mtk_bt_service_hidh_ipcrpc_struct.c",
    "./src/avrcp/mtk_bt_service_avrcp_ipcrpc_struct.c",
    "./src/a2dp/mtk_bt_service_a2dp_ipcrpc_struct.c",
    "./src/gap/mtk_bt_service_gap_ipcrpc_struct.c",
    "./src/hfp/mtk_bt_service_hfclient_ipcrpc_struct.c",
    "./src/spp/mtk_bt_service_spp_ipcrpc_struct.c",
    "./src/mesh/mtk_bt_service_mesh_ipcrpc_struct.c",
    "./src/ble_scanner/mtk_bt_service_ble_scanner_ipcrpc_struct.c",
    "./src/ble_advertiser/mtk_bt_service_ble_advertiser_ipcrpc_struct.c",
    "./src/leaudio/mtk_bt_service_leaudio_bass_ipcrpc_struct.c",
    "./src/leaudio/mtk_bt_service_leaudio_bms_ipcrpc_struct.c",
    "./src/leaudio/mtk_bt_service_leaudio_bmr_ipcrpc_struct.c",
  ]

  if (bt_c4a_ble_setup_flag != "") {
    sources += [
      "../../../../../../support/assistant-ctrl/c4a/cast-bluetooth-2.0/mtk_rpcipc_bt_setup/imtkc4a_bt_setup_client/IMtkC4a_bt_setup_ipcrpc_struct.c",
    ]
  }

  include_dirs = [
  "../../../inc_rpc",
  "../../rpc_ipc/inc",
  "inc",
  ]

  if (bt_c4a_ble_setup_flag != "") {
    include_dirs += [
      "../../../../../../support/assistant-ctrl/c4a/cast-bluetooth-2.0/mtk_rpcipc_bt_setup/imtkc4a_bt_setup_client",
  ]
  }

  deps = [

  ]

  cflags_c = [
    "-Lobj/osi",
    "-losi",
  ]

  libs = [
    "-ldl",
    "-lpthread",
    "-lresolv",
    "-lrt",
  ]
}

shared_library("libmtk_bt_service_client") {
  sources = [
    "rw_init_mtk_bt_service.c",
  ]

  sources += [
    "./src/gatt/mtk_bt_service_gattc_wrapper.c",
    "./src/gatt/mtk_bt_service_gatt_wrapper.c",
    "./src/gatt/mtk_bt_service_gatts_wrapper.c",
    "./src/hid/mtk_bt_service_hidh_wrapper.c",
    "./src/avrcp/mtk_bt_service_avrcp_wrapper.c",
    "./src/a2dp/mtk_bt_service_a2dp_wrapper.c",
    "./src/gap/mtk_bt_service_gap_wrapper.c",
    "./src/hfp/mtk_bt_service_hfclient_wrapper.c",
    "./src/spp/mtk_bt_service_spp_wrapper.c",
    "./src/mesh/mtk_bt_service_mesh_wrapper.c",
    "./src/ble_scanner/mtk_bt_service_ble_scanner_wrapper.c",
    "./src/ble_advertiser/mtk_bt_service_ble_advertiser_wrapper.c",
    "./src/leaudio/mtk_bt_service_leaudio_bass_wrapper.c",
    "./src/leaudio/mtk_bt_service_leaudio_bms_wrapper.c",
    "./src/leaudio/mtk_bt_service_leaudio_bmr_wrapper.c",
  ]

  if (bt_c4a_ble_setup_flag != "") {
    sources += [
      "../../../../../../support/assistant-ctrl/c4a/cast-bluetooth-2.0/mtk_rpcipc_bt_setup/imtkc4a_bt_setup_client/MtkC4a_bt_setup_wrapper.c",
   ]
  }

  include_dirs = [
  "../../../inc_rpc",
  "../../rpc_ipc/inc",
  "inc",
  ]

  if (bt_c4a_ble_setup_flag != "") {
    include_dirs += [
      "../../../../../../support/assistant-ctrl/c4a/cast-bluetooth-2.0/mtk_rpcipc_bt_setup/imtkc4a_bt_setup_client",
    ]
  }

  deps = [
    "//rpc_ipc/src:libipcrpc",
    "//mtk_rpcipc_bt_service/mtk_bt_service_client:libmtk_bt_ipcrpc_struct",
  ]

  cflags_c = [
    "-Lobj/osi",
    "-losi",
  ]

  libs = [
    "-ldl",
    "-lpthread",
    "-lresolv",
    "-lrt",
  ]
}
