#
#  Copyright (C) 2015 Google, Inc.
#
#  Licensed under the Apache License, Version 2.0 (the "License");
#  you may not use this file except in compliance with the License.
#  You may obtain a copy of the License at:
#
#  http://www.apache.org/licenses/LICENSE-2.0
#
#  Unless required by applicable law or agreed to in writing, software
#  distributed under the License is distributed on an "AS IS" BASIS,
#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#  See the License for the specific language governing permissions and
#  limitations under the License.
#

static_library("libbtmw_leaudio") {
  # wrap layer
  sources = [
    "../../wrap/src/leaudio/linuxbt_leaudio_bass_if.cc",
    "../../wrap/src/leaudio/linuxbt_leaudio_bms_if.cc",
    "../../wrap/src/leaudio/linuxbt_leaudio_bmr_if.cc",
  ]

  sources += [
    "bt_mw_leaudio_bass.c",
    "c_bt_mw_leaudio_bass.c",
    "bt_mw_leaudio_bms.c",
    "c_bt_mw_leaudio_bms.c",
    "bt_mw_leaudio_bmr.c",
    "c_bt_mw_leaudio_bmr.c",
  ]

  include_dirs = [
    "../../../inc",
    "../../../inc/config",
    "../../inc",
    "../../wrap/inc",
    "../inc",
    "../../../../../bt_stack/bluedroid_turnkey",
    "../../../../../bt_stack/bluedroid_turnkey/mediatek/include",
  ]
}
