## Makefile.am for DirectFB/inputdrivers

if DBOX2REMOTE
DBOX2REMOTE_DIR = dbox2remote
endif

if DREAMBOXREMOTE
DREAMBOXREMOTE_DIR = dreamboxremote
endif

if DYNAPRO_INPUT
DYNAPRO_INPUT_DIR = dynapro
endif

if ELO_INPUT
ELO_INPUT_DIR = elo
endif

if GUNZE_INPUT
GUNZE_INPUT_DIR = gunze
endif

if H3600_TS
H3600_TS_DIR = h3600_ts
endif

if JOYSTICK_INPUT
JOYSTICK_INPUT_DIR = joystick
endif

if KEYBOARD_INPUT
KEYBOARD_INPUT_DIR = keyboard
endif

if LINUX_INPUT
LINUX_INPUT_DIR = linux_input
endif

if MSTAR_LINUX_INPUT
MSTAR_LINUX_INPUT_DIR = mstar_linux_input
endif

if MSTAR_LOOPBACK_INPUT
MSTAR_LOOPBACK_INPUT_DIR = mstar_loopback_input
endif

if LIRC_INPUT
LIRC_INPUT_DIR = lirc
endif

if MUTOUCH_TS
MUTOUCH_TS_DIR = mutouch
endif

if ZYTRONIC_TS
ZYTRONIC_TS_DIR = zytronic
endif

if PENMOUNT_TS
PENMOUNT_TS_DIR = penmount
endif

if PS2MOUSE_INPUT
PS2MOUSE_INPUT_DIR = ps2mouse
endif

if SERIAL_MOUSE_INPUT
SERIALMOUSE_INPUT_DIR = serialmouse
endif

if SONYPI
SONYPI_DIR = sonypi
endif

if TSLIB
TSLIB_DIR = tslib
endif

if UCB1X00_TS
UCB1X00_TS_DIR = ucb1x00_ts
endif

if WM97XX_TS
WM97XX_TS_DIR = wm97xx_ts
endif

if MSTARIR_INPUT
MSTARIR_INPUT_DIR = mstarir
endif

if MSTARKEYPAD_INPUT
MSTARKEYPAD_INPUT_DIR = mstarkeypad
endif

if MIKEYPAD_INPUT
MIKEYPAD_INPUT_DIR = mikeypad
endif

if MSTAR_NETWORKIR_INPUT
MSTAR_NETWORKIR_INPUT_DIR = mstar_networkir
endif

if MIIR_INPUT
MIIR_INPUT_DIR = miir
endif

if MTNET_INPUT
MTNET_INPUT_DIR = mtnet
endif

SUBDIRS = \
	$(DBOX2REMOTE_DIR)	\
	$(DREAMBOXREMOTE_DIR)	\
	$(DYNAPRO_INPUT_DIR)	\
	$(ELO_INPUT_DIR)	\
	$(GUNZE_INPUT_DIR)	\
	$(H3600_TS_DIR)		\
	$(JOYSTICK_INPUT_DIR)	\
	$(KEYBOARD_INPUT_DIR)	\
	$(LINUX_INPUT_DIR)	\
	$(MSTAR_LINUX_INPUT_DIR)	\
	$(MSTAR_LOOPBACK_INPUT_DIR)	\
	$(LIRC_INPUT_DIR)	\
	$(MUTOUCH_TS_DIR)	\
	$(ZYTRONIC_TS_DIR)	\
	$(PENMOUNT_TS_DIR)	\
	$(PS2MOUSE_INPUT_DIR)	\
	$(SERIALMOUSE_INPUT_DIR) \
	$(SONYPI_DIR)		\
	$(TSLIB_DIR)		\
	$(UCB1X00_TS_DIR)	\
	$(WM97XX_TS_DIR) \
	$(MSTARIR_INPUT_DIR) \
	$(MSTARKEYPAD_INPUT_DIR) \
	$(MIKEYPAD_INPUT_DIR) \
	$(MSTAR_NETWORKIR_INPUT_DIR) \
  $(MIIR_INPUT_DIR)\
  $(MTNET_INPUT_DIR)
